--- a/android/quest/src/main/assets/configs/app/profiles/default_profile_config.json
+++ b/android/quest/src/main/assets/configs/app/profiles/default_profile_config.json
@@ -167,6 +167,13 @@
       ]
     },
     {
+      "name": "isAdult",
+      "condition": "true",
+      "actions": [
+        "data.put('isAdult', fhirPath.extractValue(Patient, \"Patient.active and (Patient.birthDate <= today() - 18 'years')\"))"
+      ]
+    },
+    {
       "name": "canBearChild",
       "condition": "true",
       "actions": [
@@ -973,7 +980,7 @@
                   "id": "availableTasks",
                   "relatedResourceId": "availableTasks",
                   "resourceType": "Task",
-                  "conditionalFhirPathExpression": "((Task.status = 'ready' or Task.status = 'cancelled' or  Task.status = 'failed') and (Task.code.empty()))"
+                  "conditionalFhirPathExpression": "(Task.code.coding.code='840534001' or (Task.status = 'ready' or Task.status = 'cancelled' or  Task.status = 'failed') and (Task.code.empty()))"
                 }
               ],
               "emptyList": {
@@ -2633,6 +2640,33 @@
             "resourceIdentifier": "@{patientId}",
             "planDefinitions": [
               "4ac4f9d6-6fc7-45bf-9a29-398798fc3134"
+            ],
+            "params": [
+              {
+                "key": "familyLogicalId",
+                "value": "@{familyLogicalId}",
+                "paramType": "UPDATE_DATE_ON_EDIT"
+              }
+            ]
+          }
+        }
+      ]
+    },
+    {
+      "title": "Record Covid Vaccination",
+      "titleColor": "@{patientTextColor}",
+      "visible": "@{isAdult}",
+      "enabled": "@{patientActive}",
+      "actions": [
+        {
+          "trigger": "ON_CLICK",
+          "workflow": "LAUNCH_QUESTIONNAIRE",
+          "questionnaire": {
+            "id": "e8572c86-065d-11ee-be56-0242ac120002",
+            "title": "Record Covid Vaccination",
+            "resourceIdentifier": "@{patientId}",
+            "planDefinitions": [
+              "d959dc24-065d-11ee-be56-0242ac120002"
             ],
             "params": [
               {
