Implement functionality to order resources via rules engine
Signed-off-by: Elly Kitoto <junkmailstoelly@gmail.com>

--- a/android/quest/src/main/assets/configs/app/profiles/household_profile_config.json
+++ b/android/quest/src/main/assets/configs/app/profiles/household_profile_config.json
@@ -194,7 +194,15 @@
       "actions": [
         "data.put('isFamilyHeadExists', empty(data.get('familyHeadId'))? 0 : 1)"
       ]
+    },
+    {
+      "name": "ascendingTask",
+      "condition": "true",
+      "actions": [
+        "data.put('ascendingTask', Task.stream().sorted().collect(Collectors.toList()))"
+      ]
     }
+
   ],
   "topAppBar": {
     "title": {
