Update APK Release Workflow Configuration 🔧 - Mark RCs as Pre-releases

--- a/.github/workflows/apk-release.yml
+++ b/.github/workflows/apk-release.yml
@@ -87,5 +87,5 @@ jobs:
           file: android/quest/build/outputs/apk/${{steps.product-flavor.outputs.id}}/release/quest-${{steps.product-flavor.outputs.id}}-release.apk
           asset_name: "$tag.apk"
           tag: ${{ github.ref }}
-          prerelease: ${{ contains(github.ref, '-alpha') || contains(github.ref, '-beta') }}
+          prerelease: ${{ contains(github.ref, '-alpha') || contains(github.ref, '-beta') || contains(github.ref, '-rc') }}
           overwrite: true
