Refactor App Flavor Configurations - Refactor to support Flavor App name config from build.gradle - Clean up unrequired files

--- a/android/quest/src/main/AndroidManifest.xml
+++ b/android/quest/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:largeHeap="true"
         android:usesCleartextTraffic="false"
         android:screenOrientation="portrait"
+        android:installLocation="internalOnly"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar"
         android:windowSoftInputMode="adjustResize"
