--- a/android/opensrp/src/main/AndroidManifest.xml
+++ b/android/opensrp/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     package="org.smartregister.opensrp">
 
     <application
-        android:name=".OpenSRPApplication"
+        android:name=".OpenSrpApplication"
         android:hardwareAccelerated="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
