comma fix in profile config and date filter in task worker

--- a/android/quest/src/main/assets/configs/app/profiles/default_profile_config.json
+++ b/android/quest/src/main/assets/configs/app/profiles/default_profile_config.json
@@ -987,7 +987,7 @@
                   "id": "availableTasks",
                   "relatedResourceId": "availableTasks",
                   "resourceType": "Task",
-                  "conditionalFhirPathExpression": "(Task.code.coding.code='840534001' or (Task.status = 'ready' or Task.status = 'cancelled' or  Task.status = 'failed') and (Task.code.empty()))"
+                  "conditionalFhirPathExpression": "(Task.code.coding.code='840534001' or (Task.status = 'ready' or Task.status = 'cancelled' or  Task.status = 'failed') and (Task.code.empty()))",
                   "sortConfig": {
                     "dataType": "DATETIME",
                     "fhirPathExpression": "Task.executionPeriod.start",
