--- a/android/gradle/libs.versions.toml
+++ b/android/gradle/libs.versions.toml
@@ -23,7 +23,7 @@ desugar-jdk-libs = "1.1.5"
 easy-rules-jexl = "4.1.0"
 espresso-core = "3.5.0"
 fhir-common-utils = "0.0.2-SNAPSHOT"
-fhir-engine = "0.1.0-beta03-preview7-SNAPSHOT"
+fhir-engine = "0.1.0-beta03-preview7.1-SNAPSHOT"
 foundation = "1.3.1"
 fragment-ktx = "1.5.5"
 fragment-testing = "1.5.2"
