--- a/android/gradle/libs.versions.toml
+++ b/android/gradle/libs.versions.toml
@@ -51,6 +51,7 @@ kotlinx-coroutines-debug = "1.6.2"
 kotlinx-coroutines-test = "1.6.2"
 kotlinx-serialization-json = "1.3.2"
 kujaku-library = "0.9.0"
+ktlint = "0.49.1"
 ktlint-cli-ruleset = "0.49.1"
 ktlint-rule-engine-core = "0.49.1"
 leakcanary-android = "2.10"
@@ -154,6 +155,7 @@ kotlinx-coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-cor
 kotlinx-coroutines-debug = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-debug", version.ref = "kotlinx-coroutines-debug" }
 kotlinx-coroutines-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-test", version.ref = "kotlinx-coroutines-test" }
 kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinx-serialization-json" }
+ktlint-main = { group = "com.pinterest", name = "ktlint", version.ref = "ktlint"}
 ktlint-cli-ruleset = { group = "com.pinterest.ktlint", name = "ktlint-cli-ruleset-core", version.ref = "ktlint-cli-ruleset" }
 ktlint-rule-engine-core = { group = "com.pinterest.ktlint", name = "ktlint-rule-engine-core", version.ref = "ktlint-rule-engine-core" }
 kujaku-library = { group = "io.ona.kujaku", name = "library", version.ref = "kujaku-library" }
