--- a/android/dataclerk/src/main/AndroidManifest.xml
+++ b/android/dataclerk/src/main/AndroidManifest.xml
@@ -7,19 +7,31 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Fhircoreandroid">
-        <activity
-            android:name=".ui.appsettings.AppSettingActivity"
-            android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.Fhircoreandroid">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        android:theme="@style/AppTheme.NoActionBar"
+        android:largeHeap="true"
+        android:networkSecurityConfig="@xml/network_security_config">
         <activity android:name=".ui.main.AppMainActivity"/>
+        <service
+            android:name="org.smartregister.fhircore.engine.auth.AuthAndroidService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="android.accounts.AccountAuthenticator" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.accounts.AccountAuthenticator"
+                android:resource="@xml/authenticator" />
+        </service>
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.fileprovider"
+
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
     </application>
 
 </manifest>
