add configuration to generate MeasureReports in the background

--- a/android/quest/src/main/assets/configs/app/reports/service_delivery_measure_report_config.json
+++ b/android/quest/src/main/assets/configs/app/reports/service_delivery_measure_report_config.json
@@ -3,7 +3,7 @@
   "configType": "measureReport",
   "id": "serviceDeliveryMeasureReport",
   "registerId": "inventoryRegister",
-  "registerDate": "2020-10-27",
+  "startPeriod": "2020-10-27",
   "showFixedRangeSelection": true,
   "reports": [
     {
