--- a/android/quest/src/main/assets/configs/app/reports/supply_chain_measure_report_config.json
+++ b/android/quest/src/main/assets/configs/app/reports/supply_chain_measure_report_config.json
@@ -1,7 +1,7 @@
 {
   "appId": "app",
   "configType": "measureReport",
-  "registerDate": "2020-10-27",
+  "startPeriod": "2020-10-27",
   "showFixedRangeSelection": true,
   "id": "supplyChainMeasureReport",
   "registerId": "inventoryRegister",
