Fix sorting resources via rules engine
Signed-off-by: Elly Kitoto <junkmailstoelly@gmail.com>

--- a/android/quest/src/main/assets/configs/app/profiles/default_profile_config.json
+++ b/android/quest/src/main/assets/configs/app/profiles/default_profile_config.json
@@ -18,13 +18,7 @@
       {
         "id": "availableTasks",
         "resource": "Task",
-        "searchParameter": "subject",
-        "sortConfigs": [
-          {
-            "paramName": "period",
-            "dataType": "DATE"
-          }
-        ]
+        "searchParameter": "subject"
       }
     ]
   },
