parent e3bf91f440c4ca1f180a6ab2310479f1ae026db5 author Elly Kitoto <junkmailstoelly@gmail.com> 1688737333 +0300 committer Elly Kitoto <junkmailstoelly@gmail.com> 1688744548 +0300
parent e3bf91f440c4ca1f180a6ab2310479f1ae026db5
author Elly Kitoto <junkmailstoelly@gmail.com> 1688737333 +0300
committer Elly Kitoto <junkmailstoelly@gmail.com> 1688744349 +0300

Add latest fixes

- Fix rules engine sort resources function
- Fix refreshing profile data
- Handle questionnaire on submission actions
- Fix Unit tests
- Fix updating Task status to READY
- Upgrade JEXL version to v3.2.1
- Fix sorting resources via rules engine
- Revert conditional check for dependent task when marking Task as due

Signed-off-by: Elly Kitoto <junkmailstoelly@gmail.com>
Co-authored-by: Peter Lubell-Doughtie <peter@ona.io>
Co-authored-by: Martin Ndegwa <ndegwamartin@users.noreply.github.com>
Co-authored-by: Martin Ndegwa <mndegwa@ona.io>

--- a/android/gradle/libs.versions.toml
+++ b/android/gradle/libs.versions.toml
@@ -6,6 +6,7 @@ activity-ktx = "1.6.1"
 appcompat = "1.5.1"
 caffeine = "2.9.1"
 cardview = "1.0.0"
+commonsJexl3 = "3.2.1"
 compressor = "3.0.1"
 constraintlayout = "2.1.4"
 constraintlayout-compose = "1.0.1"
@@ -102,6 +103,7 @@ activity-ktx = { group = "androidx.activity", name = "activity-ktx", version.ref
 appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 caffeine = { group = "com.github.ben-manes.caffeine", name = "caffeine", version.ref = "caffeine" }
 cardview = { group = "androidx.cardview", name = "cardview", version.ref = "cardview" }
+commons-jexl3 = { module = "org.apache.commons:commons-jexl3", version.ref = "commonsJexl3" }
 compressor = { group = "id.zelory", name = "compressor", version.ref = "compressor" }
 constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 constraintlayout-compose = { group = "androidx.constraintlayout", name = "constraintlayout-compose", version.ref = "constraintlayout-compose" }
