Use generic date service function to calculate under5 rule

--- a/android/quest/src/main/assets/configs/app/registers/child_register_config.json
+++ b/android/quest/src/main/assets/configs/app/registers/child_register_config.json
@@ -8,7 +8,7 @@
       "name": "under5",
       "condition": "true",
       "actions": [
-        "data.put('under5', dateService.addOrSubtractYearFromCurrentDate(5,'-'))"
+        "data.put('under5', dateService.addOrSubtractTimeUnitFromCurrentDate(5,'-','YEAR'))"
       ]
     }
   ],
