Implement QuestionnaireFragment and ViewModel
Signed-off-by: Elly Kitoto <junkmailstoelly@gmail.com>

--- a/android/quest/src/main/AndroidManifest.xml
+++ b/android/quest/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         android:theme="@style/AppTheme.NoActionBar"
         android:windowSoftInputMode="adjustResize"
         tools:ignore="UnusedAttribute,LockedOrientationActivity"
+        android:enableOnBackInvokedCallback="true"
         tools:replace="android:theme">
 
         <meta-data android:name="io.sentry.auto-init" android:value="false" />
