--- a/codecov.yml
+++ b/codecov.yml
@@ -18,7 +18,7 @@ coverage:
       default:
         enabled: true
         target: auto
-        threshold: 0.05%
+        threshold: 0.05
 flag_management:
   default_rules:
     carryforward: true
