--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,14 +44,8 @@ jobs:
       - name: Setup Gradle cache
         uses: gradle/gradle-build-action@v2
 
-      - name: Decode & Generate local.properties file
-        run: echo $LOCAL_PROPERTIES | base64 -di > local.properties
-        working-directory: android
-        env:
-          LOCAL_PROPERTIES: ${{ secrets.LOCAL_PROPERTIES }}
-
       - name: Spotless check engine module
-        run: ./gradlew :engine:spotlessCheck --stacktrace && ./gradlew :engine:ktlintCheck --stacktrace
+        run: ./gradlew -PlocalPropertiesFile=local.properties :engine:spotlessCheck :engine:ktlintCheck --stacktrace
         working-directory: android 
       
       - name: Load AVD cache
@@ -84,7 +78,7 @@ jobs:
           force-avd-creation: true
           emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
           disable-animations: true
-          script: ./gradlew :engine:clean && ./gradlew :engine:fhircoreJacocoReport --stacktrace
+          script: ./gradlew -PlocalPropertiesFile=local.properties :engine:clean :engine:fhircoreJacocoReport --stacktrace
 
       - name: Upload Engine module test coverage report to Codecov
         if: matrix.api-level == 30 # Only upload coverage on API level 30
@@ -119,17 +113,11 @@ jobs:
       - name: Copy CI gradle.properties
         run: mkdir -p ~/.gradle ; cp .github/ci-gradle.properties ~/.gradle/gradle.properties && cat ~/.gradle/gradle.properties
 
-      - name: Decode & Generate local.properties file
-        run: echo $LOCAL_PROPERTIES | base64 -di > local.properties
-        working-directory: android
-        env:
-          LOCAL_PROPERTIES: ${{ secrets.LOCAL_PROPERTIES }}
-
       - name: Setup Gradle cache
         uses: gradle/gradle-build-action@v2
 
       - name: Spotless check geowidget module
-        run: ./gradlew :geowidget:spotlessCheck --stacktrace
+        run: ./gradlew -PlocalPropertiesFile=local.properties :geowidget:spotlessCheck --stacktrace
         working-directory: android 
       
       - name: Load AVD cache
@@ -162,7 +150,7 @@ jobs:
           force-avd-creation: true
           emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
           disable-animations: true
-          script: ./gradlew :geowidget:clean && ./gradlew :geowidget:fhircoreJacocoReport --stacktrace
+          script: ./gradlew -PlocalPropertiesFile=local.properties :geowidget:clean :geowidget:fhircoreJacocoReport --stacktrace
 
       - name: Upload Geowidget module test coverage report to Codecov
         if: matrix.api-level == 30 # Only upload coverage on API level 30
@@ -198,15 +186,9 @@ jobs:
 
       - name: Setup Gradle cache
         uses: gradle/gradle-build-action@v2
-
-      - name: Decode & Generate local.properties file
-        run: echo $LOCAL_PROPERTIES | base64 -di > local.properties
-        working-directory: android
-        env:
-          LOCAL_PROPERTIES: ${{ secrets.LOCAL_PROPERTIES }}
  
       - name: Spotless check quest application
-        run: ./gradlew :quest:spotlessCheck --stacktrace && ./gradlew :quest:ktlintCheck --stacktrace
+        run: ./gradlew -PlocalPropertiesFile=local.properties :quest:spotlessCheck --stacktrace :quest:ktlintCheck --stacktrace
         working-directory: android 
       
       - name: Load AVD cache
@@ -239,7 +221,7 @@ jobs:
           force-avd-creation: true
           emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
           disable-animations: true
-          script: ./gradlew :quest:clean && ./gradlew :quest:fhircoreJacocoReport --stacktrace
+          script: ./gradlew -PlocalPropertiesFile=local.properties :quest:clean :quest:fhircoreJacocoReport --stacktrace
 
       - name: Upload Quest module test coverage report to Codecov
         if: matrix.api-level == 30 # Only upload coverage on API level 30
